--- a/portfolio.html
+++ b/portfolio.html
@@ -10,110 +10,137 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/styles.css">
 
 </head>
 
 <body>
-    <header>
-        <nav>
-            <a href="/" class="logo link"><span class="logo-color">Web</span>Studio</a>
-            <ul class="site-nav list">
-                <li><a href="./index.html" class="link">Студия</a></li>
-                <li><a href="/" class="link current">Портфолио</a></li>
-                <li><a href="/" class="link">Контакты</a></li>
-            </ul>
-        </nav>
-        <ul class="contact-nav list">
-            <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-            <li><a href="tel:380961111111" class="link">+38 096 111 11 11</a></li>
-        </ul>
+    <header class="header">
+        <section class="section">
+            <div class="container main-nav">
+                <nav class="main-nav">
+                    <a href="index.html" class="logo link"><span class="logo-color">Web</span>Studio</a>
+                    <ul class="site-nav list">
+                        <li class="site-item"><a href="./index.html" class="link current">Студия</a></li>
+                        <li class="site-item"><a href="./portfolio.html" class="link">Портфолио</a></li>
+                        <li class="site-item"><a href="/" class="link">Контакты</a></li>
+                    </ul>
+                </nav>
+                <ul class="contact-nav list">
+                    <li class="contact-item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+                    </li>
+                    <li class="contact-item"><a href="tel:380961111111" class="link">+38 096 111 11 11</a></li>
+                </ul>
+            </div>
     </header>
     <main>
-        <section class="buttons">
-            <h1 class="visually-hidden">Button</h1>
-            <ul class="btn-list list">
-                <li class="btn-item">
-                    <button type="button" class="portfolio-buttons active">Все</button>
-                </li>
-                <li>
-                    <button type="button" class="portfolio-buttons">Веб-сайты</button>
-                </li>
-                <li>
-                    <button type="button" class="portfolio-buttons">Приложения</button>
-                </li>
-                <li>
-                    <button type="button" class="portfolio-buttons">Дизайн</button>
-                </li>
-                <li>
-                    <button type="button" class="portfolio-buttons">Маркетинг</button>
-                </li>
-            </ul>
-            <ul class="portfolio-list">
-                <li>
-                    <img src="./images/portfolio/img.jpg" alt="Технокряк" width="370">
-                    <h2 class="portfolio-text">Технокряк</h2>
-                    <p class="portfolio-item">Веб-сайт</p>
-                </li>
-                <li>
-                    <img src="./images/portfolio/img2.jpg" alt="Постер New Orlean vs Golden Star" width="370">
-                    <h2 class="portfolio-text">Постер New Orlean vs Golden Star</h2>
-                    <p class="portfolio-item">Дизайн</p>
-                </li>
-                <li>
-                    <img src="./images/portfolio/img3.jpg" alt="Ресторан Seafood" width="370">
-                    <h2 class="portfolio-text">Ресторан Seafood</h2>
-                    <p class="portfolio-item">Приложение</p>
-                </li>
-                <li>
-                    <img src="./images/portfolio/img4.jpg" alt="Проект Prime" width="370">
-                    <h2 class="portfolio-text">Проект Prime</h2>
-                    <p class="portfolio-item">Маркетинг</p>
-                </li>
-                <li>
-                    <img src="./images/portfolio/img5.jpg" alt="Проект Boxes" width="370">
-                    <h2 class="portfolio-text">Проект Boxes</h2>
-                    <p class="portfolio-item">Приложение</p>
-                </li>
-                <li>
-                    <img src="./images/portfolio/img6.jpg" alt="Inspiration has no Borders" width="370">
-                    <h2 class="portfolio-text">Inspiration has no Borders</h2>
-                    <p class="portfolio-item">Веб-сайт</p>
-                </li>
-                <li>
-                    <img src="./images/portfolio/img7.jpg" alt="Издание Limited Edition" width="370">
-                    <h2 class="portfolio-text">Издание Limited Edition</h2>
-                    <p class="portfolio-item">Дизайн</p>
-                </li>
-                <li>
-                    <img src="./images/portfolio/img8.jpg" alt="Проект LAB" width="370">
-                    <h2 class="portfolio-text">Проект LAB</h2>
-                    <p class="portfolio-item">Маркетинг</p>
-                </li>
-                <li>
-                    <img src="./images/portfolio/img9.jpg" alt="Growing Business" width="370">
-                    <h2 class="portfolio-text">Growing Business</h2>
-                    <p class="portfolio-item">Приложение</p>
-                </li>
-            </ul>
+        <section>
+            <div class="container btn">
+                <h1 class="visually-hidden">Button</h1>
+                <ul class="btn-list list">
+                    <li class="btn-item">
+                        <button type="button" class="portfolio-buttons active">Все</button>
+                    </li>
+                    <li class="btn-item">
+                        <button type="button" class="portfolio-buttons">Веб-сайты</button>
+                    </li>
+                    <li class="btn-item">
+                        <button type="button" class="portfolio-buttons">Приложения</button>
+                    </li>
+                    <li class="btn-item">
+                        <button type="button" class="portfolio-buttons">Дизайн</button>
+                    </li>
+                    <li class="btn-item">
+                        <button type="button" class="portfolio-buttons">Маркетинг</button>
+                    </li>
+                </ul>
+                <ul class="portfolio-list">
+                    <li class="photo-portfolio">
+                        <img src="./images/portfolio/img.jpg" alt="Технокряк" width="370">
+                        <div class="photo-border">
+                            <h2 class="portfolio-text">Технокряк</h2>
+                            <p class="portfolio-item">Веб-сайт</p>
+                        </div>
+                    </li>
+                    <li class="photo-portfolio">
+                        <img src="./images/portfolio/img2.jpg" alt="Постер New Orlean vs Golden Star" width="370">
+                        <div class="photo-border">
+                            <h2 class="portfolio-text">Постер New Orlean vs Golden Star</h2>
+                            <p class="portfolio-item">Дизайн</p>
+                        </div>
+                    </li>
+                    <li class="photo-portfolio">
+                        <img src="./images/portfolio/img3.jpg" alt="Ресторан Seafood" width="370">
+                        <div class="photo-border">
+                            <h2 class="portfolio-text">Ресторан Seafood</h2>
+                            <p class="portfolio-item">Приложение</p>
+                        </div>
+                    </li>
+                    <li class="photo-portfolio">
+                        <img src="./images/portfolio/img4.jpg" alt="Проект Prime" width="370">
+                        <div class="photo-border">
+                            <h2 class="portfolio-text">Проект Prime</h2>
+                            <p class="portfolio-item">Маркетинг</p>
+                        </div>
+                    </li>
+                    <li class="photo-portfolio">
+                        <img src="./images/portfolio/img5.jpg" alt="Проект Boxes" width="370">
+                        <div class="photo-border">
+                            <h2 class="portfolio-text">Проект Boxes</h2>
+                            <p class="portfolio-item">Приложение</p>
+                        </div>
+                    </li>
+                    <li class="photo-portfolio">
+                        <img src="./images/portfolio/img6.jpg" alt="Inspiration has no Borders" width="370">
+                        <div class="photo-border">
+                            <h2 class="portfolio-text">Inspiration has no Borders</h2>
+                            <p class="portfolio-item">Веб-сайт</p>
+                        </div>
+                    </li>
+                    <li class="photo-portfolio">
+                        <img src="./images/portfolio/img7.jpg" alt="Издание Limited Edition" width="370">
+                        <div class="photo-border">
+                            <h2 class="portfolio-text">Издание Limited Edition</h2>
+                            <p class="portfolio-item">Дизайн</p>
+                        </div>
+                    </li>
+                    <li class="photo-portfolio">
+                        <img src="./images/portfolio/img8.jpg" alt="Проект LAB" width="370">
+                        <div class="photo-border">
+                            <h2 class="portfolio-text">Проект LAB</h2>
+                            <p class="portfolio-item">Маркетинг</p>
+                        </div>
+                    </li>
+                    <li class="photo-portfolio">
+                        <img src="./images/portfolio/img9.jpg" alt="Growing Business" width="370">
+                        <div class="photo-border">
+                            <h2 class="portfolio-text">Growing Business</h2>
+                            <p class="portfolio-item">Приложение</p>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
     <footer class="footer">
-        <a href="/" class="footer-logo link"><span class="footer-logo-studio">Web</span>Studio</a>
-        <address>
-            <ul class="adress">
-                <li class="adress-item">
-                    <a class="adress-text" href="https://goo.gl/maps/piqngm7oDQpEDh6u6" target="_blank"
-                        rel="noopener nofollow noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
-                </li>
-                <li class="adress-item">
-                    <a class="adress-link" href="mailto:info@example.com">info@example.com</a>
-                </li>
-                <li class="adress-item">
-                    <a class="adress-link" href="tel:+380991111111">+38 099 111 11 11</a>
-                </li>
-            </ul>
-        </address>
+        <div class="container">
+            <a href="./index.html" class="footer-logo link"><span class="footer-logo-studio">Web</span>Studio</a>
+            <address class="element-style">
+                <ul class="adress list">
+                    <li class="adress-item">
+                        <a class="adress-text" href="https://goo.gl/maps/piqngm7oDQpEDh6u6" target="_blank"
+                            rel="noopener nofollow noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
+                    </li>
+                    <li class="adress-item">
+                        <a class="adress-link" href="mailto:info@example.com">info@example.com</a>
+                    </li>
+                    <li class="adress-item">
+                        <a class="adress-link" href="tel:+380991111111">+38 099 111 11 11</a>
+                    </li>
+                </ul>
+            </address>
+        </div>
     </footer>
 </body>
 
