make changes in portfolio buttons

--- a/portfolio.html
+++ b/portfolio.html
@@ -40,19 +40,19 @@
             <div class="container btn">
                 <h1 class="visually-hidden">Button</h1>
                 <ul class="btn-list list">
-                    <li class="btn-item">
+                    <li class="item">
                         <button type="button" class="portfolio-buttons active">Все</button>
                     </li>
-                    <li class="btn-item">
+                    <li class="item">
                         <button type="button" class="portfolio-buttons">Веб-сайты</button>
                     </li>
-                    <li class="btn-item">
+                    <li class="item">
                         <button type="button" class="portfolio-buttons">Приложения</button>
                     </li>
-                    <li class="btn-item">
+                    <li class="item">
                         <button type="button" class="portfolio-buttons">Дизайн</button>
                     </li>
-                    <li class="btn-item">
+                    <li class="item">
                         <button type="button" class="portfolio-buttons">Маркетинг</button>
                     </li>
                 </ul>
