--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <button class="hero-button" type="button">Заказать услугу</button>
             </div>
         </section>
-        <section class="benefits">
+        <section class="section benefits">
             <div class="container">
                 <h2 class="visually-hidden">Наши плюсы</h2>
                 <ul class="features list">
