--- a/portfolio.html
+++ b/portfolio.html
@@ -18,25 +18,23 @@
 
 <body>
     <header class="header">
-        <section class="section">
-            <div class="container main-nav">
-                <nav class="main-nav">
-                    <a href="index.html" class="logo link"><span class="logo-color">Web</span>Studio</a>
-                    <ul class="site-nav list">
-                        <li class="site-item"><a href="./index.html" class="link current">Студия</a></li>
-                        <li class="site-item"><a href="./portfolio.html" class="link">Портфолио</a></li>
-                        <li class="site-item"><a href="/" class="link">Контакты</a></li>
-                    </ul>
-                </nav>
-                <ul class="contact-nav list">
-                    <li class="contact-item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
-                    </li>
-                    <li class="contact-item"><a href="tel:380961111111" class="link">+38 096 111 11 11</a></li>
+        <div class="container main-nav">
+            <nav class="main-nav">
+                <a href="index.html" class="logo link"><span class="logo-color">Web</span>Studio</a>
+                <ul class="site-nav list">
+                    <li class="site-item"><a href="./index.html" class="link current">Студия</a></li>
+                    <li class="site-item"><a href="./portfolio.html" class="link">Портфолио</a></li>
+                    <li class="site-item"><a href="/" class="link">Контакты</a></li>
                 </ul>
-            </div>
+            </nav>
+            <ul class="contact-nav list">
+                <li class="contact-item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+                <li class="contact-item"><a href="tel:380961111111" class="link">+38 096 111 11 11</a></li>
+            </ul>
+        </div>
     </header>
     <main>
-        <section>
+        <section class="section">
             <div class="container btn">
                 <h1 class="visually-hidden">Button</h1>
                 <ul class="btn-list list">
