--- a/portfolio.html
+++ b/portfolio.html
@@ -22,8 +22,8 @@
             <nav class="main-nav">
                 <a href="index.html" class="logo link"><span class="logo-color">Web</span>Studio</a>
                 <ul class="site-nav list">
-                    <li class="site-item"><a href="./index.html" class="link current">Студия</a></li>
-                    <li class="site-item"><a href="./portfolio.html" class="link">Портфолио</a></li>
+                    <li class="site-item"><a href="./index.html" class="link">Студия</a></li>
+                    <li class="site-item"><a href="./portfolio.html" class="link current">Портфолио</a></li>
                     <li class="site-item"><a href="/" class="link">Контакты</a></li>
                 </ul>
             </nav>
